# EnzymePynetics

./: .gitignore  README.md  Readme.md  TestDataModel.ipynb  Test_fromEnzymeML.ipynb  TestfromEnzymeML.ipynb  data_test.ipynb  from_pyenzyme_test.ipynb  irrev_MM.json  irrev_MM_enzyme.json  irrev_MM_enzyme_inactivation_with_offset.json  irrev_MM_with_2min_delay.json  pyproject.toml  requirements.txt  setup.py  simulated_enzymeML.json  test.ipynb  test_Kinetic_Model.ipynb  test_data.ipynb  test_enzymepynetics.ipynb  test_with simulated.ipynb  testtest.ipynb
.github/workflows/: generate_api.yaml
EnzymeKinetics/: __init__.py
EnzymeKinetics/core/: __init__.py  concentrationtypes.py  enzymekinetics.py  enzymekineticsexperiment.py  inhibitor.py  measurement.py  series.py  stoichiometrytypes.py  timetypes.py
EnzymeKinetics/schemes/: Enzyme Kinetics Data-model.md  Enzyme Kinetics Data-model_metadata.json  EnzymeKineticsDatamodel.md  EnzymeKineticsDatamodel_metadata.json
EnzymeKinetics/tools/: __init__.py  fitter.py  kineticmodel.py  kinetics.py  parameterestimator.py
EnzymePynetics/: __init__.py
EnzymePynetics/core/: __init__.py  abstractspecies.py  concentrationtypes.py  correlation.py  enzymekinetics.py  enzymekineticsexperiment.py  estimator.py  inhibitor.py  kineticmodel.py  kineticparameter.py  measurement.py  measurementdata.py  modelresult.py  parameter.py  (+15 more)
pyDataset/: __init__.py
pyyEnzymeKinetics/: __init__.py
pyyEnzymeKinetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
specifications/: EnzymeKinetics.md  Example.md  enzymepynetics.md
(+67 files in other folders)
