[tool.poetry]
name = "enzymepynetics"
version = "0.1.0"
description = "Kinetic parameter estimation and model comparison for catalyzed reactions"
authors = ["haeussma <83341109+haeussma@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "EnzymePynetics/core" },
    { include = "EnzymePynetics/ioutils" },
    { include = "EnzymePynetics/tools" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
lmfit = "^1.2.2"
scipy = "^1.11.3"
numpy = "^1.26.1"
plotly = "^5.18.0"
pandas = "^2.1.2"
sdrdm = {git = "https://github.com/JR-1991/software-driven-rdm.git", branch = "linking-refactor"}
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
